--- a/sources/build.gradle
+++ b/sources/build.gradle
@@ -43,15 +43,17 @@ repositories {
 
 dependencies {
 
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.10'
+
     // Logger
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'
     compile group: 'ch.qos.logback', name: 'logback-core', version: '1.1.7'
 
     // Lambdas & Streams
-    compile ('com.aol.simplereact:cyclops-react:1.0.2') {
+    /*compile ('com.aol.simplereact:cyclops-react:1.0.2') {
         exclude group: 'org.slf4j'
-    }
+    }*/
     compile group: 'io.javaslang', name: 'javaslang', version: '2.0.4'
 
     // Test dependencies
